--- a/exchangis-engines/engineconn-plugins/datax/pom.xml
+++ b/exchangis-engines/engineconn-plugins/datax/pom.xml
@@ -126,6 +126,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>${jasypt.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
