--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
 	<properties>
 		<revision>1.1.3-webank</revision>
-		<dss.version>1.1.2</dss.version>
+		<dss.version>1.5.0-SNAPSHOT</dss.version>
 		<linkis.version>1.5.0-wds-SNAPSHOT</linkis.version>
 		<linkis.datasource.version>1.5.0-wds-SNAPSHOT</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
@@ -49,6 +49,7 @@
 		<scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
 		<jdk.compile.version>1.8</jdk.compile.version>
 		<maven.version>3.3.3</maven.version>
+		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
 		<gson.version>2.8.5</gson.version>
 		<fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
 		<org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
@@ -281,7 +282,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.6</version>
+					<version>${maven-jar-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -310,12 +311,12 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<!--		<plugins>-->
-		<!--			<plugin>-->
-		<!--				<groupId>org.codehaus.mojo</groupId>-->
-		<!--				<artifactId>flatten-maven-plugin</artifactId>-->
-		<!--			</plugin>-->
-		<!--		</plugins>-->
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 
 </project>
