--- a/exchangis-project/exchangis-project-server/pom.xml
+++ b/exchangis-project/exchangis-project-server/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-datasource-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
             <artifactId>exchangis-job-server</artifactId>
             <version>${project.version}</version>
         </dependency>
