--- a/exchangis-datasource/exchangis-datasource-core/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-core/pom.xml
@@ -23,8 +23,6 @@
             <artifactId>exchangis-dao</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-datasource-client</artifactId>
@@ -43,8 +41,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-metadata-query-common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
