--- a/exchangis-datasource/exchangis-datasource-service/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-service/pom.xml
@@ -53,6 +53,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
+                <version>${scala-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
