--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
 		<scala.version>2.11.12</scala.version>
 		<scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
 		<jdk.compile.version>1.8</jdk.compile.version>
-		<maven.version>3.3.3</maven.version>
+		<maven.version>3.8.1</maven.version>
+		<maven-site-plugin.version>3.8.2</maven-site-plugin.version>
 		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
 		<gson.version>2.8.5</gson.version>
 		<fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
@@ -224,7 +225,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.5.1</version>
+					<version>${maven.version}</version>
 					<configuration>
 						<source>${jdk.compile.version}</source>
 						<target>${jdk.compile.version}</target>
@@ -237,35 +238,19 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.3</version>
+					<version>${maven-site-plugin.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
 					<version>${scala-maven-plugin.version}</version>
-<!--					<configuration>-->
-<!--						<scalaVersion>${scala.version}</scalaVersion>-->
-<!--						<recompileMode>incremental</recompileMode>-->
-<!--						<args>-->
-<!--							<arg>-unchecked</arg>-->
-<!--							<arg>-deprecation</arg>-->
-<!--							<arg>-feature</arg>-->
-<!--							<arg>-explaintypes</arg>-->
-<!--&lt;!&ndash;							<arg>-target:jvm-${java.version}</arg>&ndash;&gt;-->
-<!--						</args>-->
-<!--					</configuration>-->
 					<executions>
-						<execution>
-							<id>eclipse-add-source</id>
-							<goals>
-								<goal>add-source</goal>
-							</goals>
-						</execution>
 						<execution>
 							<id>scala-compile-first</id>
 							<phase>process-resources</phase>
 							<goals>
 								<goal>compile</goal>
+								<goal>add-source</goal>
 							</goals>
 						</execution>
 						<execution>
