Update install scripts

--- a/assembly-package/config/dss-exchangis-server.properties
+++ b/assembly-package/config/dss-exchangis-server.properties
@@ -15,11 +15,13 @@
 #
 #
 
+# db
 wds.linkis.test.mode=false
 wds.linkis.server.mybatis.datasource.url=jdbc:mysql://{IP}:{PORT}/{database}?useSSL=false&characterEncoding=UTF-8&allowMultiQueries=true&useAffectedRows=true
 wds.linkis.server.mybatis.datasource.username={username}
 wds.linkis.server.mybatis.datasource.password={password}
 
+# gateway
 wds.linkis.gateway.ip={LINKIS_IP}
 wds.linkis.gateway.port={LINKIS_PORT}
 wds.linkis.gateway.url=http://{LINKIS_IP}:{LINKIS_PORT}/
@@ -39,7 +41,7 @@ wds.exchangis.client.linkis.server-url=http://{LINKIS_IP}:{LINKIS_PORT}/
 wds.exchangis.client.linkis.token.value=EXCHANGIS-AUTH
 wds.exchangis.datasource.extension.dir=exchangis-extds/
 
-##restful
+# restful
 wds.linkis.server.restful.scan.packages=com.webank.wedatasphere.exchangis.datasource.server.restful.api,\
   com.webank.wedatasphere.exchangis.project.server.restful,\
   com.webank.wedatasphere.exchangis.job.server.restful
