--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,8 @@
 		<maven-site-plugin.version>3.8.2</maven-site-plugin.version>
 		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
 		<gson.version>2.8.5</gson.version>
-		<fasterxml.jackson.version>2.17.1</fasterxml.jackson.version>
+		<jackson-core.version>2.13.4</jackson-core.version>
+		<jackson-databind.version>2.13.4.2</jackson-databind.version>
 		<org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
 		<math3.version>3.1.1</math3.version>
 		<httpclient.version>4.5.4</httpclient.version>
@@ -165,12 +166,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>${fasterxml.jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-asl</artifactId>
-				<version>${org.codehaus.jackson.version}</version>
+				<version>${jackson-databind.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
