Remove snakeyaml and adjust properties

--- a/assembly-package/sbin/env.properties
+++ b/assembly-package/sbin/env.properties
@@ -4,3 +4,10 @@ MODULE_DEFAULT_PREFIX="dss-exchangis-main-"
 MODULE_DEFAULT_SUFFIX="-dev"
 DEBUG_MODE=false
 DEBUG_PORT=8321
+
+SERVER_XMX=3g
+SERVER_XMS=3g
+SERVER_NEW_SIZE=1g
+SERVER_MAX_NEW_SIZE=1g
+SERVER_PERM_SIZE=128m
+SERVER_MAX_PERM_SIZE=256m
