--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 	</licenses>
 
 	<properties>
-		<revision>1.1.3-webank</revision>
+		<revision>1.1.4-webank</revision>
 		<dss.version>1.5.0-SNAPSHOT</dss.version>
 		<linkis.version>1.5.0-wds-SNAPSHOT</linkis.version>
 		<linkis.datasource.version>1.5.0-wds-SNAPSHOT</linkis.datasource.version>
@@ -129,6 +129,10 @@
 					<exclusion>
 						<artifactId>hibernate-validator</artifactId>
 						<groupId>org.hibernate.validator</groupId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.yaml</groupId>
+						<artifactId>snakeyaml</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
