Move job context to module exchangis-job-common

--- a/exchangis-datasource/exchangis-datasource-core/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-core/pom.xml
@@ -24,6 +24,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-job-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-datasource-client</artifactId>
             <exclusions>
