--- a/exchangis-job/exchangis-job-common/pom.xml
+++ b/exchangis-job/exchangis-job-common/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>linkis-protocol</artifactId>
             <version>${linkis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-rpc</artifactId>
+            <version>${linkis.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
