--- a/exchangis-engines/exchangis-engine-core/pom.xml
+++ b/exchangis-engines/exchangis-engine-core/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-bml-client</artifactId>
-            <version>${linkis.version}</version>
+            <version>1.4.0</version>
         </dependency>
     </dependencies>
 </project>
