--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 	<properties>
 		<revision>1.1.6-webank</revision>
 		<dss.version>1.5.0-SNAPSHOT</dss.version>
-		<linkis.version>1.5.0-wds-SNAPSHOT</linkis.version>
+		<linkis.version>1.6.0</linkis.version>
 		<linkis.datasource.version>1.5.0-wds-SNAPSHOT</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
 		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
