Rename module exchangis-dao to exchangis-common

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -37,7 +37,7 @@ body:
         - "exchangis-job-metrics"
         - "exchangis-project"
         - "exchangis-plugins"
-        - "exchangis-dao"
+        - "exchangis-common"
         - "exchangis-web"
     validations:
       required: true
