--- a/exchangis-datasource/extension-datasources/exchangis-datasource-ext-hive/pom.xml
+++ b/exchangis-datasource/extension-datasources/exchangis-datasource-ext-hive/pom.xml
@@ -21,7 +21,7 @@
 
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
-            <artifactId>exchangis-dao</artifactId>
+            <artifactId>exchangis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
-            <artifactId>exchangis-dao</artifactId>
+            <artifactId>exchangis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
