--- a/exchangis-engines/exchangis-engine-core/pom.xml
+++ b/exchangis-engines/exchangis-engine-core/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
-            <artifactId>exchangis-dao</artifactId>
+            <artifactId>exchangis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--bml-client-->
