--- a/exchangis-project/exchangis-project-server/pom.xml
+++ b/exchangis-project/exchangis-project-server/pom.xml
@@ -35,7 +35,7 @@
         </dependency>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
-            <artifactId>exchangis-dao</artifactId>
+            <artifactId>exchangis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
