--- a/exchangis-datasource/exchangis-datasource-service/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-service/pom.xml
@@ -68,5 +68,13 @@
                 </configuration>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 </project>
