Add generic http client builder

--- a/exchangis-server/src/main/resources/exchangis.properties
+++ b/exchangis-server/src/main/resources/exchangis.properties
@@ -52,6 +52,9 @@ wds.linkis.server.mybatis.BasePackage=com.webank.wedatasphere.exchangis.dao,\
   com.webank.wedatasphere.exchangis.job.server.mapper,\
   com.webank.wedatasphere.exchangis.metrics.dao
 
-
-
-
+# httpclient
+wds.exchangis.http.client.connection.timeout=30000
+wds.exchangis.http.client.connection.request.timeout=30000
+wds.exchangis.http.client.read-timeout=90000
+wds.exchangis.http.client.max-idle-time=30000
+wds.exchangis.http.client.connection.max-size=100
