--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,12 @@
 		<linkis.version>1.4.0</linkis.version>
 		<linkis.datasource.version>1.4.0</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
-		<scala.version>2.12.12</scala.version>
+		<scala.version>2.12.18</scala.version>
 		<scala-maven-plugin.version>4.7.1</scala-maven-plugin.version>
 		<jdk.compile.version>1.8</jdk.compile.version>
-		<maven.version>3.3.3</maven.version>
+		<maven.compiler.source>${jdk.compile.version}</maven.compiler.source>
+		<maven.compiler.target>${jdk.compile.version}</maven.compiler.target>
+		<maven.version>3.9.8</maven.version>
 		<gson.version>2.8.5</gson.version>
 		<fasterxml.jackson.version>2.11.3</fasterxml.jackson.version>
 		<org.codehaus.jackson.version>1.9.13</org.codehaus.jackson.version>
@@ -182,6 +184,16 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>${jdk.compile.version}</source>
+						<target>${jdk.compile.version}</target>
+						<encoding>${project.build.sourceEncoding}</encoding>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
