Move dto and exception from exchangis-job-server to exchangis-job-common

--- a/exchangis-job/exchangis-job-server/pom.xml
+++ b/exchangis-job/exchangis-job-server/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>exchangis-engine-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-privilege-provider</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- scheduler module -->
         <dependency>
             <groupId>org.apache.linkis</groupId>
