--- a/exchangis-project/exchangis-project-provider/pom.xml
+++ b/exchangis-project/exchangis-project-provider/pom.xml
@@ -20,7 +20,12 @@
     <dependencies>
         <dependency>
             <groupId>com.webank.wedatasphere.exchangis</groupId>
-            <artifactId>exchangis-project-entity</artifactId>
+            <artifactId>exchangis-project-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.webank.wedatasphere.exchangis</groupId>
+            <artifactId>exchangis-job-common</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
