--- a/exchangis-engines/engines/datax/datax-hdfswriter/pom.xml
+++ b/exchangis-engines/engines/datax/datax-hdfswriter/pom.xml
@@ -106,6 +106,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.apache.paimon</groupId>
+            <artifactId>paimon-hive-connector-3.1</artifactId>
+            <version>${paimon.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hive</groupId>
             <artifactId>hive-common</artifactId>
             <version>${hive.version}</version>
