--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 		<linkis.version>1.5.0-wds-SNAPSHOT</linkis.version>
 		<linkis.datasource.version>1.5.0-wds-SNAPSHOT</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<flatten-maven-plugin.version>1.3.0</flatten-maven-plugin.version>
 		<maven-spotless-maven-plugin.version>2.43.0</maven-spotless-maven-plugin.version>
 		<maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>
