Update linkis-computation-client version to 1.6.0-wds

--- a/exchangis-job/exchangis-job-launcher/pom.xml
+++ b/exchangis-job/exchangis-job-launcher/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-computation-client</artifactId>
-            <version>${linkis.version}</version>
+            <version>${linkis-computation-client.version}</version>
         </dependency>
 
     </dependencies>
