--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<revision>1.1.7-webank</revision>
 		<dss.version>1.8.0-SNAPSHOT</dss.version>
 		<linkis.version>1.5.0-wds-SNAPSHOT</linkis.version>
+		<linkis-computation-client.version>1.6.0-wds</linkis-computation-client.version>
 		<linkis.datasource.version>1.5.0-wds-SNAPSHOT</linkis.datasource.version>
 		<streamis.version>0.1.0-SNAPSHOT</streamis.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
