--- a/exchangis-engines/engines/datax/pom.xml
+++ b/exchangis-engines/engines/datax/pom.xml
@@ -31,6 +31,7 @@
         <commons-codec>1.11</commons-codec>
         <datax.engine.version>3.0.0-Plus-2</datax.engine.version>
         <jackson.version>2.11.0</jackson.version>
+        <groovy.version>2.4.21</groovy.version>
     </properties>
     <modules>
         <module>datax-core</module>
