--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<jobmanager.version>0.1.0-SNAPSHOT</jobmanager.version>
 		<jasypt.version>1.9.3</jasypt.version>
 		<xstream.version>1.4.21</xstream.version>
+		<protobuf-java>3.25.5</protobuf-java>
 	</properties>
 
 	<modules>
@@ -89,26 +90,6 @@
 	</modules>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.scala-lang</groupId>
-				<artifactId>scala-library</artifactId>
-				<version>${scala.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.scala-lang</groupId>
-				<artifactId>scala-compiler</artifactId>
-				<version>${scala.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.scala-lang</groupId>
-				<artifactId>scala-reflect</artifactId>
-				<version>${scala.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.scala-lang</groupId>
-				<artifactId>scalap</artifactId>
-				<version>${scala.version}</version>
-			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
@@ -138,6 +119,11 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>4.0.1</version>
+			</dependency>
 			<!--linkis http support-->
 			<dependency>
 				<groupId>org.apache.linkis</groupId>
@@ -159,11 +145,6 @@
 				<artifactId>linkis-pes-client</artifactId>
 				<version>${linkis.version}</version>
 			</dependency>
-<!--			<dependency>-->
-<!--				<groupId>org.apache.linkis</groupId>-->
-<!--				<artifactId>linkis-metadata-query-common</artifactId>-->
-<!--				<version>${linkis.datasource.version}</version>-->
-<!--			</dependency>-->
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
@@ -183,6 +164,11 @@
 				<artifactId>xstream</artifactId>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<version>${xstream.version}</version>
+			</dependency>
+			<dependency>
+				<artifactId>com.google.protobuf</artifactId>
+				<groupId>protobuf-java</groupId>
+				<version>${protobuf-java.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
