Upgrade version to 1.1.8

--- a/exchangis-datasource/exchangis-datasource-core/pom.xml
+++ b/exchangis-datasource/exchangis-datasource-core/pom.xml
@@ -30,6 +30,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-pes-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-pes-client</artifactId>
         </dependency>
     </dependencies>
