--- a/exchangis-engines/engines/datax/pom.xml
+++ b/exchangis-engines/engines/datax/pom.xml
@@ -17,7 +17,7 @@
         <slf4j-api-version>1.7.25</slf4j-api-version>
         <logback-classic-version>1.2.3</logback-classic-version>
         <commons-math3-version>3.1.1</commons-math3-version>
-        <guava-version>16.0.1</guava-version>
+        <guava-version>33.4.0-jre</guava-version>
         <gson-version>2.8.2</gson-version>
         <commons-compress-version>1.19</commons-compress-version>
         <commons-io>2.4</commons-io>
