--- a/exchangis-engines/exchangis-engine-core/pom.xml
+++ b/exchangis-engines/exchangis-engine-core/pom.xml
@@ -28,11 +28,13 @@
             <artifactId>exchangis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--bml-client-->
+        <dependency>
+            <groupId>org.apache.linkis</groupId>
+            <artifactId>linkis-pes-common</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.linkis</groupId>
             <artifactId>linkis-pes-client</artifactId>
-            <version>${linkis.version}</version>
         </dependency>
     </dependencies>
 </project>
